# backend/api/src/main/java/com/shoppiem/api/utils/security/UnsecurePaths.java
@@ -14,7 +14,9 @@ public class UnsecurePaths {
       "/ws/**",
       "/ws",
       "/product/**",
-      "/product"
+      "/product",
+      "/extension",
+      "/extension/**"
   );
 
   public static Stream<String> paths() {
